@@ -841,6 +841,7 @@ class Adminer {
 				$insert = "";
 				$buffer = "";
 				$keys = array();
+				$generatedKeys = array();
 				$suffix = "";
 				$fetch_function = ($table != '' ? 'fetch_assoc' : 'fetch_row');
 				while ($row = $result->$fetch_function()) {
@@ -848,6 +849,10 @@ class Adminer {
 						$values = array();
 						foreach ($row as $val) {
 							$field = $result->fetch_field();
+							if (!empty($fields[$field->name]['generated'])) {
+								$generatedKeys[$field->name] = true;
+								continue;
+                            }
 							$keys[] = $field->name;
 							$key = idf_escape($field->name);
 							$values[] = "$key = VALUES($key)";
@@ -865,6 +870,10 @@ class Adminer {
 							$insert = "INSERT INTO " . table($table) . " (" . implode(", ", array_map('idf_escape', $keys)) . ") VALUES";
 						}
 						foreach ($row as $key => $val) {
+							if (isset($generatedKeys[$key])) {
+								unset($row[$key]);
+								continue;
+                            }
 							$field = $fields[$key];
 							$row[$key] = ($val !== null
 								? unconvert_field($field, preg_match(number_type(), $field["type"]) && !preg_match('~\[~', $field["full_type"]) && is_numeric($val) ? $val : q(($val === false ? 0 : $val)))
